--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
+    "cypress": "^7.4.0",
+    "cypress-wait-until": "^1.7.1",
     "electron": "^11.2.1",
     "electron-builder": "^22.9.1",
     "electron-devtools-installer": "^3.1.1",
